# ChangeLog for net-misc/asterisk-app_icd
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_icd/Attic/ChangeLog,v 1.8 2007/02/09 04:40:42 flameeyes Exp $

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  16 Apr 2006; Stefan Knoblich <stkn@gentoo.org>
  asterisk-app_icd-1.0.0.ebuild:
  Update DEPEND to block asterisk-1.2.x (unsupported).

  19 Sep 2005; Stefan Knoblich <stkn@gentoo.org>
  asterisk-app_icd-1.0.0.ebuild:
  Stable on x86.

  16 Aug 2005; Stefan Knoblich <stkn@gentoo.org>
  asterisk-app_icd-1.0.0.ebuild:
  Block >=asterisk-1.1.0, because 1.2.0(_pre) is not supported at the moment.

  08 Jul 2005; David Holm <dholm@gentoo.org> asterisk-app_icd-1.0.0.ebuild:
  Added to ~ppc.

  01 Jul 2005; Stefan Knoblich <stkn@gentoo.org>
  +files/asterisk-app_icd-1.0.0-configsegv.diff,
  asterisk-app_icd-1.0.0.ebuild:
  Fixed segmentation fault in config parser (thanks to Danny van Dyk
  <Kugelfang@gentoo.org> for finding this), keywording ~x86 and ~amd64
  (patch sent upstream).

  17 Jun 2005; Stefan Knoblich <stkn@gentoo.org>
  asterisk-app_icd-1.0.0.ebuild:
  fixed sqlite configure failure, works on x86 now

*asterisk-app_icd-1.0.0 (16 Jun 2005)

  16 Jun 2005; Stefan Knoblich <stkn@gentoo.org> +metadata.xml,
  +files/asterisk-app_icd-1.0.0-bristuff.diff,
  +files/asterisk-app_icd-1.0.0-gentoo.diff, +asterisk-app_icd-1.0.0.ebuild:
  Initial import, -* masked because some issues need to be resolved.
