@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>voip</herd>
-<maintainer>
-  <email>stkn@gentoo.org</email>
-</maintainer>
+  <herd>voip</herd>
 </pkgmetadata>
